# nutrition-agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
agent/: context.py  graph.py  llm.py  state.py
agent/nodes/: food_db_writer.py  food_logger.py  food_vector_writer.py  health_anazlizer.py  history_query.py  intent_router.py  meal_planner.py  memory_load.py
agent/nodes/health_analyzer/: __init__.py  analyzer.py  merger.py
agent/nodes/health_analyzer/retrievers/: diet_history_retriever.py  knowledge_retriever.py  nutrition_sql_retriever.py
agent/nodes/meal_planner/: __init__.py  merger.py  planner.py
agent/nodes/meal_planner/retrievers/: goal_retriever.py  preference_retriever.py  recipe_retriever.py
agent/nodes/query_nodes/: query.py
agent/prompts/: food_logger_prompt.py
api/: main.py
api/routes/: chat.py  food.py  health.py  report.py
client/: db_client.py  embedding_client.py  qdrant_client.py
db/: alter_food_logs_extend.sql  crud.py  init_schema_and_seed.sql  models.py  repositories.py  seed_common_foods_150.sql  vector_store.py
docker/: docker-compose.yml
memory/: long_term.py  short_term.py  slot.py
rag/: embeddings.py  history_retriever.py  recipe_retriever.py
tools/: calculator.py  scheduler.py  usda_api.py
vision/: calorie_parser.py  food_recognizer.py
