[project]
name = "nutrition-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncmy>=0.2.9",
    "asyncpg>=0.31.0",
    "chromadb>=0.5.0",
    "cryptography>=46.0.7",
    "fastapi>=0.111.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "jieba>=0.42.1",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=1.2.0",
    "langgraph>=0.1.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "loguru>=0.7.3",
    "mem0ai>=0.0.20",
    "pillow>=10.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.29.0",
]
